--- a/templates/registration-email.html
+++ b/templates/registration-email.html
@@ -7,7 +7,7 @@
     <style type="text/css">
         
 body {
-  background: #F8A434;
+  background:#76ACFF;
   font-family: 'Lato', sans-serif;
   color: #FDFCFB;
   text-align: center;
@@ -90,14 +90,14 @@ input:focus {
 <body>
         <form action="#" method="post" name="sign up for beta form">
                 <div class="header">
-                   <p>¡GRACIAS POR TU REGISTRO!</p>
+                   <p>¡Registro enviado con exito!</p>
                 </div>
                 <div class="description">
                   <p>Usted fue registrado con exito en nuestra aplicación.</p>
                 </div>
                 <div style="text-align:center;margin:0;margin-bottom:30px;color:#000000;font-family:'Courier New', Courier, monospace">
                     <img src='https://chart.googleapis.com/chart?cht=qr&chl=%C2%A1Prueba%20de%20env%C3%ADo%20QR!%20Si%20ve%20esto%20es%20que%20se%20envi%C3%B3%20exitosamente.%20%0A%0AEva%20Liliana%20Osuna%20Hern%C3%A1ndez.&chs=180x180&choe=UTF-8&chld=L|2' alt=''>
-                    <!--Usas el codigo de qr-code-generator -->
+                    <!--Código de qr-code-generator -->
                 </div>
                 <p>Eva Liliana Osuna Hernández, ITIC's.</p>
               </form>
